--- a/src/Pages/About/module.About.css
+++ b/src/Pages/About/module.About.css
@@ -149,6 +149,25 @@ body {
   font-weight: 500;
 }
 
+.a-cont {
+  display: block;
+  padding: 1.6rem 2.2rem;
+  text-align: center;
+  text-decoration: none;
+  color: #e5e7eb;
+}
+.a-cont {
+  outline: none;
+  border: none;
+}
+
+.a-cont:focus,
+.a-cont:active {
+  outline: none;
+  border: none;
+  box-shadow: none;
+}
+
 /* =========================================
    RESPONSIVE STYLES (MOBILE)
    ========================================= */
